--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ h2 {
   font-family: 'Cuprum', sans-serif;
   font-size: 32px;
   color: #424242;
-  margin: 18px auto;
+  margin: 10px auto;
 }
 
 p {
@@ -55,11 +55,15 @@ a {
 footer {
   position: fixed;
   background: #B9A880;
-  margin: 20px auto 20px auto;
+  margin: 10px auto;
   padding: 15px 0;
   bottom: 0px;
   width: 100%;
-  height: 60px;
+  height: 50px;
+}
+
+footer p {
+  font-size: 16px;
 }
 
 .parent {
